Tris et conversion des images pour le portfolio + Background HeaderPage

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -890,7 +890,7 @@ section {
 
 .dark-wrapper.opaqued,
 .dark-opaqued {
-    background-image: url(../img/bg/bg1_ofeel.jpg);
+    background-image: url(../img/bg/bg9.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
